--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.orionskelp.cordit.MainActivity"
+            android:theme="@style/default_activity_theme"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" >
@@ -30,6 +31,7 @@
         </activity>
         <activity 
             android:name="com.orionskelp.cordit.ChordActivity"
+            android:theme="@style/default_activity_theme"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" >
